app/styles/common.css
/* ... */
.combobox-options.fullWidth {
  width: 100%;
}

.combobox-options.empty {
  padding-block: var(--s-1-5);
}

.combobox-item {
  display: flex;
  align-items: center;
  padding: var(--s-1) var(--s-3);
  gap: var(--s-2);
  list-style: none;
}

.combobox-no-matches {
  display: flex;
  align-items: center;
  justify-content: center;
  color: var(--text-lighter);
  font-size: var(--fonts-xs);
  font-weight: var(--bold);
  gap: var(--s-1);
}

.combobox-emoji {
  color: var(--text);
  font-size: var(--fonts-lg);
}

.combobox-item.active {
  background-color: var(--theme-transparent);
}

.article > p {
  padding-block: var(--s-2-5);
}

.calendar__event__tags {
  display: flex;
  max-width: var(--tags-max-width, 18rem);
  flex-wrap: wrap;
  padding: 0;
  color: var(--black-text);
  font-size: var(--fonts-xxs);
  font-weight: var(--semi-bold);
  gap: var(--s-1);
  list-style: none;
}

.calendar__event__tags > li {
  display: flex;
  border-radius: var(--rounded);
  padding-inline: var(--s-1-5);
}

.calendar__event__badge-tag {
  color: var(--badge-text);
}

.calendar__event__tag-delete-button {
  margin-left: auto;
}

.calendar__event__tag-badges {
  display: flex;
  margin-inline-start: var(--s-1);
}

.calendar__event__tag-delete-button > svg {
  width: 0.85rem !important;
  color: var(--black-text);
  margin-inline-end: 0 !important;
  margin-inline-start: var(--s-1);
}

.alert {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  border-radius: var(--rounded);
  background-color: var(--theme-info-transparent);
  color: var(--text);
  font-size: var(--fonts-sm);
  font-weight: var(--semi-bold);
  gap: var(--s-2);
  line-height: 0.75;
  margin-inline: auto;
  padding-block: var(--s-1-5);
  padding-inline-end: var(--s-4);
  padding-inline-start: var(--s-3);
}

.alert.tiny {
  font-size: var(--fonts-xs);
}

.alert.warning {
  background-color: var(--theme-warning-transparent);
}

.alert.error {
  background-color: var(--theme-error-transparent);
}

.alert.success {
  background-color: var(--theme-success-transparent);
}

.avatar {
  border-radius: 50%;
  background-color: var(--bg-lightest);
  background-image: url("/static-assets/svg/new-background-pattern.svg");
}

.alert > svg {
  height: 1.75rem;
  fill: var(--theme-info);
}

.alert.tiny > svg {
  height: 1.25rem;
}

.alert.warning > svg {
  fill: var(--theme-warning);
}

.alert.error > svg {
  fill: var(--theme-error);
}

.alert.success > svg {
  fill: var(--theme-success);
}

.form-errors {
  font-size: var(--fonts-sm);
}

.form-errors > h4 {
  color: var(--theme-error);
}

.section > div {
  padding: var(--s-2);
  border-radius: var(--rounded);
  background-color: var(--bg-darker);
}

.section > h2 {
  color: var(--text-lighter);
  font-size: var(--fonts-md);
}

.stack {
  display: flex;
  flex-direction: column;
}

.stack.xxs {
  gap: var(--s-1);
}

.stack.xs {
  gap: var(--s-1-5);
}

.stack.sm {
  gap: var(--s-2);
}

.stack.md {
  gap: var(--s-4);
}

.stack.smedium {
  gap: var(--s-6);
}

.stack.lg {
  gap: var(--s-8);
}

.stack.horizontal {
  flex-direction: row;
}

.lock-scroll {
  overflow: hidden;
}

/* https://stackoverflow.com/questions/50917016/make-a-hidden-field-required/50917245#comment117565184_50917245 */
.hidden-input-with-validation {
  position: absolute;
  width: 0;
  height: 0;
  border: none;
  opacity: 0;
  pointer-events: none;
}

.label__container {
  display: flex;
  align-items: flex-end;
  gap: var(--s-2);
  margin-block-end: var(--label-margin);
}

.label__container > label {
  margin: 0;
}

.label__value {
  color: var(--text-lighter);
  font-size: var(--fonts-xxs);
  margin-block-start: -5px;
}

.label__value.warning {
  color: var(--theme-warning);
}

.label__value.error {
  color: var(--theme-error);
}

.error-message {
  display: block;
  color: var(--theme-error);
  font-size: var(--fonts-xs);
  margin-block-start: var(--label-margin);
}

.info-message {
  display: block;
  color: var(--text-lighter);
  font-size: var(--fonts-xs);
  margin-block-start: var(--label-margin);
}

.builds-container {
  display: grid;
  justify-content: center;
  gap: var(--s-3);
  grid-template-columns: repeat(auto-fit, 240px);
}

.build {
  display: flex;
  flex-direction: column;
  padding: var(--s-3);
  border-radius: var(--rounded);
  background-color: var(--bg-lighter);
  gap: var(--s-3);
}

.build__title {
  overflow: hidden;
  height: 2.5rem;
  font-size: var(--fonts-sm);
  line-height: 1.25;
  word-wrap: break-all;
}

.build__top-row {
  display: flex;
  justify-content: space-between;
}

.build__date-author-row {
  display: flex;
  font-size: var(--fonts-xxxs);
  gap: var(--s-1);
}

.build__modes {
  display: flex;
  min-width: max-content;
  gap: var(--s-1);
}

.build__weapon {
  padding: var(--s-0-5);
  border-radius: 50%;
  background-color: var(--bg-darker-very-transparent);
}

.build__weapon-text {
  padding-left: var(--s-1);
  color: var(--text-lighter);
  font-size: var(--fonts-xxs);
  font-weight: var(--semi-bold);
}

.build__weapons {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  gap: var(--s-1);
}

.build__gear-abilities {
  display: grid;
  column-gap: var(--s-1);
  grid-template-columns: repeat(5, max-content);
  place-items: center;
  row-gap: var(--s-2);
}

.build__gear {
  border-radius: 50%;
  background-color: var(--bg-darker-very-transparent);
}

.build__ability {
  width: var(--ability-size);
  height: var(--ability-size);
  padding: 0;
  border: 2px solid var(--theme-transparent);
  border-radius: 50%;
  border-right: 0;
  border-bottom: 0;
  background: var(--bg-ability);
  background-size: 100%;
  box-shadow: 0 0 0 1px var(--bg-ability);
  transform: scale(1);
  transition: all 0.1s ease;
  user-select: none;
}

.build__ability.is-drag-target {
  background: var(--abilities-button-bg);
  transform: scale(1.15);
}
/* ... */

